<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>qrcodegen</name>
  <version>1.0.0</version>
  <description>
	  QR Code generator library
  </description>
  <maintainer email="me@nayuki.io">Project Nayuki</maintainer>
  <maintainer email="fedor@quasi.ai">Fedor Bokov</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
